# zad-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: api-sync.yml  ci.yml  claude-code-review.yml  claude.yml  pre-commit.yml  release.yml
api/: upstream-openapi.json
scripts/: check_coverage.py  fetch_openapi.py
skills/zad/: SKILL.md
src/zad_cli/: __init__.py  __main__.py  cli.py  config.py  helpers.py  services.py  settings.py
src/zad_cli/api/: client.py  errors.py  models.py
src/zad_cli/commands/: admin.py  backup.py  clone.py  component.py  config_cmd.py  deployment.py  invite.py  logs.py  metrics.py  open_cmd.py  project.py  resource.py  restore.py  service.py  task.py
src/zad_cli/config/: context.py  settings.py
src/zad_cli/output/: formatter.py  progress.py
tests/: test_backwards_compat.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_models.py  test_output.py  test_settings.py  test_spec_conformance.py
tests/commands/: test_admin_restore.py  test_deployment.py
