[project]
name = "zad-cli"
version = "0.2.1"
description = "CLI for ZAD (Zelfservice Applicatie Deployment)"
readme = "README.md"
license = "EUPL-1.2"
requires-python = ">=3.11"
authors = [
    { name = "Rijks ICT Gilde" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/RijksICTGilde/zad-cli"
Issues = "https://github.com/RijksICTGilde/zad-cli/issues"

[project.scripts]
zad = "zad_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/zad_cli"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/zad_cli/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""
upload_to_pypi = false
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
